<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.result.ResultActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/bg_app"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_sibarat_dev_purple" />

    <TextView
        android:id="@+id/tv_hasilKata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:layout_marginBottom="170dp"
        android:fontFamily="sans-serif"
        android:text="@string/result"
        android:textFontWeight="600"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/hasil_scan_string"
        android:textFontWeight="700"
        android:textSize="72sp"
        app:layout_constraintBottom_toTopOf="@id/layout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hasilKata" />

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="@id/tv_resultText"
        app:layout_constraintStart_toStartOf="@id/tv_resultText"
        app:layout_constraintTop_toBottomOf="@id/tv_resultText">

        <ImageButton
            android:id="@+id/btn_reset"
            style="@style/ButtonGeneral"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/btn_shape"
            android:contentDescription="@string/reset_button"
            android:src="@drawable/ic_reset" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>